--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ android {
 dependencies {
     def daggerVersion = '2.14.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
@@ -79,13 +79,13 @@ dependencies {
 
     //debugging
     implementation 'com.jakewharton.timber:timber:4.6.1'
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.1'
 
     // Room
     implementation "android.arch.persistence.room:runtime:1.0.0"
     kapt "android.arch.persistence.room:compiler:1.0.0"
     implementation "android.arch.persistence.room:rxjava2:1.0.0"
 
-
-    debugImplementation 'com.amitshekhar.android:debug-db:1.0.1'
-
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
 }
