- add gitignore - add teams package - add teams MVP classes, DI classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".ui.rules.RulesActivity" />
         <activity android:name=".ui.main_game.MainGameActivity" />
         <activity android:name=".ui.settings.SettingsActivity" />
+        <activity android:name=".ui.teams.TeamsActivity" />
     </application>
 
 </manifest>
