--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,8 @@ android {
             applicationIdSuffix ".demo"
             versionNameSuffix "-demo"
         }
-        full {
-            applicationIdSuffix ".full"
-            versionNameSuffix "-full"
+        production {
+
         }
     }
 
@@ -56,21 +55,23 @@ android {
 }
 
 dependencies {
-    def daggerVersion = '2.14.1'
+    def daggerVersion = '2.15'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // Dagger
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
 
     // Rx java
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation "com.twistedequations.rx:rx-savestate:2.0.2"
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
@@ -78,14 +79,14 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1'
 
     //debugging
-    implementation 'com.jakewharton.timber:timber:4.6.1'
-    debugImplementation 'com.amitshekhar.android:debug-db:1.0.1'
+    implementation 'com.jakewharton.timber:timber:4.7.0'
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
 
     // Room
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    kapt "android.arch.persistence.room:compiler:1.0.0"
-    implementation "android.arch.persistence.room:rxjava2:1.0.0"
+    implementation "android.arch.persistence.room:runtime:1.1.0"
+    kapt "android.arch.persistence.room:compiler:1.1.0"
+    implementation "android.arch.persistence.room:rxjava2:1.1.0"
 
     // RecyclerView
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
