--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,6 @@ dependencies {
     // RecyclerView
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation "com.andkulikov:transitionseverywhere:1.7.9"
 }
